Revision history for {{$dist->name}}

{{$NEXT}}
  - use Alien::Autotools in share build

0.10      2017-07-07 03:22:40 -0400

0.09_02   2017-06-27 15:14:41 -0400
  - Enable disabled test t/xs.t

0.09_01   2017-06-27 15:10:56 -0400
  - migrate to Alien::Build
  - build from latest production source when building from source
  - numerous build fixes for OS X, FreeBSD, Strawberry

0.08      2017-02-12 16:13:14 -0500
  - Upgrade hunspell to 1.3.4
  - Switch from sourceforge to github as the source
  - Require Alien::Base 0.32 for better SSL workage

0.07      2016-02-05 23:06:50 -0500
  - prune t/xs.t and t/ffi.t experimental tests

0.06      2016-01-29 09:57:23 -0500
  - Fixed metadata bug where bin_requires were included
    as configure_requires

0.05      2016-01-28 21:24:02 -0500
  - Use Alien::Base::ModuleBuild as configure_requires
    (instead of Alien::Base)

0.04      2016-01-13 00:14:21 -0500
  - Test::Alien and Test::Stream are optional test
    dependencies for the production version
  - Otherwise identical to 0.03_04

0.03_04   2016-01-11 03:56:44 -0500
  - Fixes to produce dynamic libraries on FreeBSD10.x
  - Fixes for more robust dynamic library scanning
  - Require Alien::Base 0.024 on Windows
    (for https://github.com/Perl5-Alien/Alien-Base/pull/139)

0.03_03   2016-01-05 13:17:30 -0500
  - Use attach instead of function in t/ffi.t to see
    if it is more reliable.

0.03_01   2016-01-04 20:44:08 -0500
  - Apply patch to expose add_dic via the C interface
    https://github.com/hunspell/hunspell/pull/355
    optionally used by Text::Hunspell::FFI
  - Included additional Test::Alien based tests.
    These are required for dev releases, but may
    be optional (for now) on production releases.

0.03      2015-12-26 17:07:31 -0700
  - Production release identical to 0.02_03

0.02_03   2015-12-24 11:02:40 -0700
  - Clean up dynamic libraries from old installs

0.02_02   2015-12-23 20:01:41 -0700
  - Better C++ diagnostics