@@ -43,10 +43,12 @@ diag_preamble = | };
 remove = strict
 remove = warnings
 remove = base
+remove = lib
 remove = ExtUtils::CppGuess
 remove = Text::ParseWords
 remove = File::Glob
 remove = Config
+remove = JSON::PP
 
 [Author::Plicease::Upload]
 cpan = 1
