@@ -1,20 +1,19 @@
-use Test2::V0;
+use Test2::V0 -no_srand => 1;
 use Test::Alien;
 use Alien::Hunspell;
+use lib 't/lib';
+use Test2::Require::Dev;
 
 alien_ok 'Alien::Hunspell';
 
 my $xs = do { local $/; <DATA> };
 
-#todo 'C++ is hard', sub {
-  xs_ok { xs => $xs, verbose => 1, cpp => 1 }, with_subtest {
-    plan 2;
-    my $ptr = My::Hunspell::Hunspell_create("t/supp.aff","t/supp.dic");
-    ok $ptr, "ptr = $ptr";
-    My::Hunspell::Hunspell_destroy($ptr);
-    ok 1, "did not crash";
-  };
-#};
+xs_ok { xs => $xs, verbose => 1, cpp => 1 }, with_subtest {
+  my $ptr = My::Hunspell::Hunspell_create("t/supp.aff","t/supp.dic");
+  ok $ptr, "ptr = $ptr";
+  My::Hunspell::Hunspell_destroy($ptr);
+  ok 1, "did not crash";
+};
 
 done_testing;
 
